Fix hero section height on mobile - ensure navbar + hero = exactly 100vh

--- a/css/style.css
+++ b/css/style.css
@@ -268,11 +268,18 @@ body {
         right: 0;
         z-index: 1050 !important;
         width: 100%;
+        max-height: 70px;
+        height: auto;
     }
     
     /* Set navbar height variable for hero calculation */
     :root {
         --navbar-height: 70px;
+    }
+    
+    /* Ensure navbar doesn't exceed 70px when collapsed */
+    .navbar:not(.show) {
+        max-height: 70px;
     }
     
     body {
@@ -325,17 +332,21 @@ body {
     
     /* Hero section fullscreen below 992px - accounting for navbar */
     #home {
-        height: calc(100vh - var(--navbar-height, 70px));
+        height: calc(100vh - var(--navbar-height, 70px)) !important;
+        min-height: calc(100vh - var(--navbar-height, 70px)) !important;
+        max-height: calc(100vh - var(--navbar-height, 70px)) !important;
         margin-bottom: 0 !important;
-        margin-top: var(--navbar-height, 70px);
+        margin-top: var(--navbar-height, 70px) !important;
     }
     
     #home > div {
-        height: 100%;
+        height: 100% !important;
+        max-height: 100% !important;
     }
     
     #home img {
-        height: 100%;
+        height: 100% !important;
+        max-height: 100% !important;
         object-fit: cover;
     }
     
@@ -747,6 +758,7 @@ body {
         max-width: 100% !important;
         height: calc(100vh - var(--navbar-height, 70px)) !important;
         min-height: calc(100vh - var(--navbar-height, 70px)) !important;
+        max-height: calc(100vh - var(--navbar-height, 70px)) !important;
     }
     
     #home .container-fluid {
